ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: etd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - stats.etdchain.net
        - admin.etdchain.net
        - api.etdchain.net
      secretName: ingress-secret
  rules:
    - host: api.etdchain.net
      http:
        paths:
          - path: /stats/transaction
            pathType: Prefix
            backend:
              service:
                name: etdstats-transaction-service
                port:
                  number: 80
    - host: stats.etdchain.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: etdstats-service
                port:
                  number: 80
    - host: admin.etdchain.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
